--- a/TestsSystem/Pages/AddQuestions.xaml
+++ b/TestsSystem/Pages/AddQuestions.xaml
@@ -16,7 +16,7 @@
         </Style>
     </Page.Resources>
     <Grid>
-        Не желаемые изменения
+        Желаемые изменения
         <StackPanel Width="600">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Style="{StaticResource textMargin}" Text="Название теста:" FontSize="14"/>
