--- a/TestsSystem/Pages/AddQuestions.xaml
+++ b/TestsSystem/Pages/AddQuestions.xaml
@@ -10,13 +10,12 @@
       Style="{StaticResource pageFont}"
       Title="Добавление вопроса" Loaded="Page_Loaded">
     <Page.Resources>
-        <Style x:Key="textMargin" BasedOn="{StaticResource blueText}" TargetType="TextBlock">
+        <Style x:Key="textMargin" BasedOn="{StaticResource smallTBlStyle}" TargetType="TextBlock">
             <Setter Property="Margin" Value="10"/>
-            <Setter Property="FontWeight" Value="Bold"/>
         </Style>
     </Page.Resources>
     <Grid>
-        <StackPanel Width="600">
+        <StackPanel Margin="15">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Style="{StaticResource textMargin}" Text="Название теста:" FontSize="14"/>
                 <TextBlock Style="{StaticResource textMargin}" Text="Test" x:Name="testNameHeader" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
