--- a/TestsSystem/Pages/StudentsPanel.xaml
+++ b/TestsSystem/Pages/StudentsPanel.xaml
@@ -12,13 +12,29 @@
       Title="Тесты" Loaded="Page_Loaded">
 
     <Grid>
-        <StackPanel HorizontalAlignment="Stretch" Margin="15" VerticalAlignment="Center">
-            <TextBlock Style="{StaticResource blueText}" HorizontalAlignment="Center" Text="Выберите тест"/>
-            <ListBox x:Name="testsList" Margin="0 10 0 0" Height="150"/>
-            <Button Content="Пройти тест" Margin="0 10 0 0" x:Name="startTest" Click="startTest_Click" Style="{StaticResource butStyle}"/>
+        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="15">
+            <!-- Выберите тест -->
+            <TextBlock Style="{StaticResource mediumTBlStyle}"
+                       HorizontalAlignment="Center"
+                       Text="Выберите тест"/>
+            <ListBox x:Name="testsLB" 
+                     Margin="0 10 0 0" 
+                     Height="150"/>
+            
+            <!-- Пройти тест -->
+            <Button Content="Пройти тест"
+                    Margin="0 10 0 0" 
+                    x:Name="startTestBut"
+                    Click="startTestBut_Click"
+                    Style="{StaticResource butStyle}"/>
+            
+            <!-- История пройденных тестов -->
             <DataGrid CanUserAddRows="False"
                       CanUserDeleteRows="False"
-                      x:Name="historyGrid" AutoGenerateColumns="False" Height="150" Margin="0 10 0 0">
+                      x:Name="historyDG"
+                      AutoGenerateColumns="False" 
+                      Height="150"
+                      Margin="0 10 0 0">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Название теста" Binding="{Binding Tests.Test_name}"/>
                     <DataGridTextColumn Header="Дата" Binding="{Binding Date}"/>
