--- a/TestsSystem/Pages/AddUserPage.xaml
+++ b/TestsSystem/Pages/AddUserPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TestsSystem.Pages.AddUserPanel"
+﻿<Page x:Class="TestsSystem.Pages.AddUserPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
