--- a/TestsSystem/Pages/testingPage.xaml
+++ b/TestsSystem/Pages/testingPage.xaml
@@ -7,6 +7,7 @@
       mc:Ignorable="d" 
       MinWidth="800"
       MinHeight="350"
+      KeepAlive="False"
       Style="{StaticResource pageFont}"
       DataContext="{Binding RelativeSource={RelativeSource Self}}"
       Title="Тестирование" Loaded="Page_Loaded">
